apps/deployments/argocd/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cloud.google.com/neg: '{"ingress":true}'  # Ensure this is required for your setup
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations: 
    kubernetes.io/ingress.class: "traefik-external"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.argocd.10.net.ar`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
    - match: Host(`argocd.10.net.ar`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
  tls:
    secretName: argocd-dev-cert
